// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`driver.route.peer-budget.acceptance given: [journey] peer review budget exhaustion and extension when: [t0] artifact created and pass attempted with failed reviews then: stdout has good vibes 1`] = `
"🦉 the way speaks for itself
   ├─ ✓ review.1 - completed [TIME]
   └─ ✗ judge.1 - blocked [TIME]

🗿 route.stone.set
   ├─ stone = 1.execute
   ├─ passage = blocked
   ├─ reason = blockers exceed threshold (1 > 0)
   └─ guard
      ├─ artifacts
      │   └─ src/**/*.ts
      ├─ reviews
      │   └─ r1: mock-reviewer (l1, 1/2, rejected)
      │       ├─ rejected [TIME]
      │       ├─ review: .route/1.execute.guard.review.i1.e0aae4264c854c203aaff5a5ed15c176fb117aacd9ea5fed2ac8d500fa35679b.r1.md
      │       └─ 1 blocker 🔴
      └─ judges
          └─ j1: rhx route.stone.judge --mechanism reviewed? --stone $stone --route $route --allow-blockers 0 --allow-nitpicks 1
              ├─ finished [TIME] ✗
              └─ reason: blockers exceed threshold (1 > 0)
"
`;

exports[`driver.route.peer-budget.acceptance given: [journey] peer review budget exhaustion and extension when: [t1] second pass attempt (consumes more budget) then: stdout has good vibes 1`] = `
"🦉 the way speaks for itself
   ├─ ✓ review.1 - completed [TIME]

🗿 route.stone.set
   ├─ stone = 1.execute
   ├─ passage = blocked
   ├─ reason = peer reviewer budget exhausted: mock-reviewer
   ├─ options
   │  ├─ increase budget
   │  │  └─ rhx route.guard.budget --for review --add N --peer mock-reviewer --stone 1.execute
   │  └─ approve as-is
   │     └─ rhx route.stone.set --stone 1.execute --as approved
   └─ guard
      ├─ artifacts
      │   └─ src/**/*.ts
      └─ reviews
          └─ r1: mock-reviewer (l1, 2/2, exhausted)
              ├─ exhausted
              └─ review: .route/1.execute.guard.review.i1.6b085541feda505cf8c0d0d4929a3b937eac477a6af3437f758a27001cdbadae.r1.md
"
`;

exports[`driver.route.peer-budget.acceptance given: [journey] peer review budget exhaustion and extension when: [t2] third pass attempt (budget should exhaust) then: stdout has good vibes 1`] = `
"🦉 the way speaks for itself

🗿 route.stone.set
   ├─ stone = 1.execute
   ├─ passage = blocked
   ├─ reason = peer reviewer budget exhausted: mock-reviewer
   ├─ options
   │  ├─ increase budget
   │  │  └─ rhx route.guard.budget --for review --add N --peer mock-reviewer --stone 1.execute
   │  └─ approve as-is
   │     └─ rhx route.stone.set --stone 1.execute --as approved
   └─ guard
      ├─ artifacts
      │   └─ src/**/*.ts
      └─ reviews
          └─ r1: mock-reviewer (l1, 2/2, exhausted)
              └─ exhausted
"
`;

exports[`driver.route.peer-budget.acceptance given: [journey] peer review budget exhaustion and extension when: [t3] budget is extended via route.guard.budget then: stdout has good vibes 1`] = `
"
🦉 budget extended

🗿 route.guard.budget
   ├─ route = .
   ├─ add = 2
   ├─ peer = mock-reviewer
   └─ updates
      └─ mock-reviewer: 2 → 4

"
`;

exports[`driver.route.peer-budget.acceptance given: [journey] peer review budget exhaustion and extension when: [t4] pass attempted after budget extension with passed reviews then: stdout has good vibes 1`] = `
"🦉 the way speaks for itself
   ├─ ✓ review.1 - completed [TIME]
   └─ ✓ judge.1 - allowed [TIME]

🗿 route.stone.set
   ├─ stone = 1.execute
   ├─ passage = allowed
   ├─ guard
   │  ├─ artifacts
   │  │   └─ src/**/*.ts
   │  ├─ reviews
   │  │   └─ r1: mock-reviewer (l1, 3/4, approved)
   │  │       ├─ approved [TIME] ✓
   │  │       └─ review: .route/1.execute.guard.review.i1.8991072e84931bf0298195a33d866685be7e16f9ca921210660a6416559d694d.r1.md
   │  └─ judges
   │      └─ j1: rhx route.stone.judge --mechanism reviewed? --stone $stone --route $route --allow-blockers 0 --allow-nitpicks 1
   │          └─ finished [TIME] ✓
   │
   └─ the way continues, run
      └─ rhx route.drive
"
`;

exports[`driver.route.peer-budget.acceptance given: [journey] peer review budget exhaustion and extension when: [t5] pass re-attempted (cached review, same artifact hash) then: stdout has good vibes 1`] = `
"🦉 the way speaks for itself
   ├─ ✓ review.1 - completed (cached)
   └─ ✓ judge.1 - allowed (cached)

🗿 route.stone.set
   ├─ stone = 1.execute
   ├─ passage = allowed
   ├─ guard
   │  ├─ artifacts
   │  │   └─ src/**/*.ts
   │  ├─ reviews
   │  │   └─ r1: mock-reviewer (l1, 3/4, approved)
   │  │       ├─ cached ✓
   │  │       └─ review: .route/1.execute.guard.review.i1.8991072e84931bf0298195a33d866685be7e16f9ca921210660a6416559d694d.r1.md
   │  └─ judges
   │      └─ j1: rhx route.stone.judge --mechanism reviewed? --stone $stone --route $route --allow-blockers 0 --allow-nitpicks 1
   │          └─ · cached
   │             └─ on src/**/*.ts
   │
   └─ the way continues, run
      └─ rhx route.drive
"
`;
